2008-10-09  Richard Hult  <richard@imendio.com>

	Bug 550342 – Splash screens have a caption

	* gdk/quartz/gdkwindow-quartz.c: (_gdk_window_new),
	(gdk_window_set_decorations): Patch from Marianne Gagnon to make
	splash windows borderless.

2008-10-09  Michael Natterer  <mitch@imendio.com>

	Bug 516425 – Optionally display accelerators in popups

	* gtk/gtkuimanager.h (enum GtkUIManagerItemType): add value
	GTK_UI_MANAGER_POPUP_WITH_ACCELS which works like _POPUP but
	shows the actions' accelerators.

	* gtk/gtkuimanager.c: honor the new enum value for programmatically
	created UIs, and support <popup accelerators="true"> in the XML
	for the same purpose.

2008-10-09  Simos Xenitellis  <simos@gnome.org>

	Bug 554192 – double press on the "circumflex" dead key 
	(standard french 105 keyboard) no longer produces the "^" character

	* gtk/gtkimcontextsimple.c (gtk_im_context_simple_filter_keypress):
	Changed the order, put check_compact_table() first, then 
	check_algorithmically().

2008-10-08  Christian Persch  <chpe@gnome.org>

        Bug 554702 – gtkfilesystem leaks GError

        * gtk/gtkfilesystem.c (_gtk_file_system_init): Free the GError.

2008-10-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (update_current_folder_get_info_cb):
	Don't forget to reset reload_state when current_folder is already
	correct. Fixes https://bugzilla.redhat.com/show_bug.cgi?id=465992

2008-10-08  Christian Dywan  <christian@imendio.com>

	Bug 555270 – Allow unsetting a MessageDialog's image

	* gtk/gtkmessagedialog.c (gtk_message_dialog_set_property),
        Remove a superfluous cast to GtkWidget*
	(gtk_message_dialog_set_image): Accept NULL for the image
	and unset the image in that case.

2008-10-08  Christian Dywan  <christian@imendio.com>

	Bug 436533 – Allow more space efficient scroll arrows placement

	* gtk/gtkenums.h: Add GtkArrowPlacement
	* gtk/gtkmenu.c (gtk_menu_class_init), (get_arrows_border),